--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,27 @@
 @import "/src/data/styles.css";
 
+/* Loading State */
+body.loading {
+	overflow: hidden;
+}
+
+body.loaded {
+	overflow: auto;
+}
+
+.main-content {
+	transition: opacity 0.8s ease-in-out;
+}
+
+.content-hidden {
+	opacity: 0;
+}
+
+.content-visible {
+	opacity: 1;
+}
+
+/* Existing Styles */
 ::-webkit-scrollbar {
 	width: 10px;
 }
